[package]
name = "bug-repro-zbus-silent-disconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
fern = "0.6.1"
log = "0.4.17"
once_cell = "1.17.0"
serde = "1.0.152"
serde_repr = "0.1.10"
tokio = { version = "1.25.0", default-features = false, features = [
  "rt",
  "macros",
  "sync",
] }
zbus = { version = "3.8.0", default-features = false, features = ["tokio"] }
